--- a/servidor_minecraft/journeymap/server/5.10/journeymap.server.global.config
+++ b/servidor_minecraft/journeymap/server/5.10/journeymap.server.global.config
@@ -10,7 +10,7 @@
   "allowMultiplayerSettings": "ALL",
   "worldPlayerRadar": "ALL",
   "worldPlayerRadarUpdateTime": "5",
-  "seeUndergroundPlayers": "ALL",
+  "seeUndergroundPlayers": "NONE",
   "hideOps": "false",
   "hideSpectators": "false",
   "allowDeathPoints": "true",
@@ -23,7 +23,7 @@
   "biomeMapping": "ALL",
   "caveMapping": "ALL",
   "radarEnabled": "ALL",
-  "playerRadarEnabled": "true",
+  "playerRadarEnabled": "false",
   "villagerRadarEnabled": "true",
   "animalRadarEnabled": "true",
   "mobRadarEnabled": "true",
