--- a/servidor_minecraft/journeymap/server/5.10/journeymap.server.global.config
+++ b/servidor_minecraft/journeymap/server/5.10/journeymap.server.global.config
@@ -13,7 +13,7 @@
   "seeUndergroundPlayers": "NONE",
   "hideOps": "false",
   "hideSpectators": "false",
-  "allowDeathPoints": "true",
+  "allowDeathPoints": "false",
   "showInGameBeacons": "true",
   "allowWaypoints": "true",
   "teleportEnabled": "false",
